building structure of mobile branch
building index_mobile.html and main-mobile.css

--- a/gallery_mobile.html
+++ b/gallery_mobile.html
@@ -11,7 +11,8 @@
         
         <div id="header-con">
             <div id="main-header" class="grid-con">
-                <img src="https://via.placeholder.com/186x80" alt="image" id="header-logo">
+                <img src="images/logo.png" alt="image" id="header-logo" width="60" height="60">
+                <h3 class="title">Korean Restraunt</h3>
                  <div id="mobile-nav">
                     <span class="burger"></span>
                     <span class="burger"></span>
@@ -23,7 +24,8 @@
         <main>
             <div id="hero-gallery-con">
                 <div class="grid-con">
-                    <div id="hero-gallery-text" class="box-color">
+                    <div id="hero-gallery-text">
+                       <img src="images/rectangle pictures/cold noodle.jpg" id="hero-image" class="box-color"> 
                     </div>
                     <div id="gallery-controls">
                         <span class="dot"></span>
@@ -34,9 +36,9 @@
             </div>
 
             <div class="grid-con" id="gallery">
-                <h2>Blandit At Tuctor</h2>
+                <h2>Recommendations For Today</h2>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/388x242" alt="image">
+                    <img src="images/rectangle pictures/ banquet noodles.jpg" alt="image">
                 </div>
                 <div class="gallery-box">
                     <img src="https://via.placeholder.com/388x242" alt="image">
