building gallery_mobile
adding images, text, and css codes in gallery_mobile.html

--- a/gallery_mobile.html
+++ b/gallery_mobile.html
@@ -38,36 +38,55 @@
             <div class="grid-con" id="gallery">
                 <h2>Recommendations For Today</h2>
                 <div class="gallery-box">
-                    <img src="images/rectangle pictures/ banquet noodles.jpg" alt="image">
+                    <img src="images/rectangle pictures/Bossam.jpg" alt="image">
+                    <p> Bossam</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/388x242" alt="image">
+                    <img src="images/rectangle pictures/Bulgogi.jpg" alt="image">
+                    <p>Bulgogi</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/388x242" alt="image">
+                    <img src="images/rectangle pictures/Chicken doritang.jpg" alt="image">
+                    <p>Doritang</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/388x242" alt="image">
+                    <img src="images/rectangle pictures/egg fride.jpg" alt="image">
+                    <P>Egg Custard</P>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/388x242" alt="image">
+                    <img src="images/rectangle pictures/Galbitang.jpg" alt="image">
+                    <P>Galbitang</P>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/388x242" alt="image">
+                    <img src="images/rectangle pictures/miso soup.jpg" alt="image">
+                    <p>Imso_Soup</p>
                 </div>
             </div>              
         </main>
 
-        <div id="footer-con">
+        <div id="footer-con2">
             <div class="grid-con">
-                <div id="footer-box">
+                <div id="footer-box" class="row">
+                    <div class="column">
+                        <img src="images/social media/facebook.png" class="social" alt="social meida logo">
+                    </div>
+                    <div class="column">
+                        <img src="images/social media/instagram.png" class="social" alt="social meida logo">
+                    </div>
+                    <div class="column">
+                        <img src="images/social media/twitter.png" class="social" alt="social meida logo">
+                    </div>
+                    <div class="column">
+                        <img src="images/social media/Youtube.png" class="social" alt="social meida logo">
+                    </div>
                 </div>
                 <div id="footer-newsletter">
+                    <p>Newsletter</p>
                 </div>
-                <div id="footer-newsletter2">
+                <div id="footer-backtotop">
+                    <p>Back To Top</p>
                 </div>
             </div>
         </div>
-    </div> 
 </body>
 </html>
