error of creating the branch
There was an error about creating this branch.

--- a/gallery_mobile.html
+++ b/gallery_mobile.html
@@ -38,7 +38,7 @@
             <div class="grid-con" id="gallery">
                 <h2>Recommendations For Today</h2>
                 <div class="gallery-box">
-                    <img src="images/rectangle pictures/Bossam.jpg" alt="image">
+                    <img src="images/rectangle pictures/bossam_mobile.jpg" alt="image">
                     <p> Bossam</p>
                 </div>
                 <div class="gallery-box">
