building html and css
added imgs, htmls , and css about desktop index html

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -42,7 +42,7 @@
                 <h2>“What is Korean cuisine?”</h2>   
                     <div id="about-us-text-con">     
                         <div class="grid-con">
-                            <div id="about-us-text" class="box-color2">
+                            <div id="about-us-text" class="box-color">
                                 <h3>Korean food came from very old traditions in Korea. It has developed through many environmental, political, and cultural changes. There are special rules for eating meals in Korea. 
                                     <br>
                                     <h1 class="hidden">...</h1>
@@ -74,7 +74,6 @@
                         Address:
                         130 Dundas St, London, ON N6A 1G2
                     </p>
-                    <h3>Contact Form</h3>
 
                     <div class="container">
                       <form action="/action_page.php">
