--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,23 @@
         
         <div id="header-con">
             <div id="main-header" class="grid-con">
-                <div id="header-box1" class="box-color">
+                <div id="header-box1" class="logo">
+                    <img src="images/logo.png" alt="logo" width="60" height="60">
+                    <p>Korean Restraunt</p>
                 </div>
                 <div id="main-nav" class="box-color">
+                    <nav id="main-nav">
+                        <h2 class="hidden">Main Navigation</h2>
+                        <ul>
+                            <li><a class="active" href="index.html">About Us</a></li>
+                            <li><a href="#">Food & Beverages</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul> 
+                    </nav>
                 </div>
                 <div id="header-box2" class="box-color">
+                    <a id="Log-in-top" class="Log-in" href="#"><h3>Log-in</h3></a>
                 </div>
             </div>
         </div> 
@@ -23,8 +35,15 @@
         <main>
 
             <div id="gallery-hero-con">
+                <img src="images/korean foods.jpg" alt="hero">
                 <div class="grid-con">
                     <div id="gallery-text" class="box-color">
+                        <h3>Have You Know?</h3>
+                        <p>There are hundreds of different types of kimchi made with different vegetables as the main ingredients.
+                            Traditionally, winter kimchi, called kimjang, was stored in large earthenware fermentation vessels, called onggi, 
+                            in the ground to prevent freezing during the winter months and to keep it cool enough to slow down the fermentation process 
+                            during summer months.
+                        </p>
                     </div>
                     <div id="gallery-controls">
                         <span class="dot"></span>
@@ -35,69 +54,109 @@
             </div>
      
             <div class="grid-con" id="gallery">
-                <h2>Blandit At Tuctor</h2>
+                <h2 class="recommendations">Recipe Menus</h2>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/bossam_gallery.jpg" alt="image">
+                    <P>Bossam</P>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/Bulgogi.jpg" alt="image">
+                    <p>Bulgogi</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/spicy_chicken_gallery.jpg" alt="image">
+                    <p>Dak-Bokkeum-Tang</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/egg fride.jpg" alt="image">
+                    <p>Egg-Custard</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/Galbitang _gallery.jpg" alt="image">
+                    <p>Galbitang</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/miso soup.jpg" alt="image">
+                    <p>Imso-Soup</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/pork belly.jpg" alt="image">
+                    <p>Pork-Belly</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/rice balls.jpg" alt="image">
+                    <p>Rice Balls</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/round polka dot.jpg" alt="image">
+                    <p>Round Polka Dot</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/stick.jpg" alt="image">
+                    <p>Sanjeok</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/cold noodles.jpg" alt="image">
+                    <p>Naengmyeon</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/Japchae.jpg" alt="image">
+                    <p>Japchae</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/Steamed Kodari.jpg" alt="image">
+                    <p>Steamed Kodari</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/Budae_Jjigae.jpg" alt="image">
+                    <p>Budae_Jjigae</p>
                 </div>
                 <div class="gallery-box">
-                    <img src="https://via.placeholder.com/536x242" alt="image">
+                    <img src="images/rectangle pictures/ Gamjatang.jpg" alt="image">
+                    <p>Gamjatang</p>
                 </div>
             </div>         
         </main>
 
-        <div id="footer-con">
+    <div id="footer-con">
             <div class="grid-con" id="footer">
-                <div id="footer-logo" class="box-color">
-                </div>
-                <div id="footer-nav" class="box-color">
+                <div id="footer-box" class="row">
+                    <div class="column">
+                        <img src="images/social media/facebook.png" class="social" alt="social meida logo" width="100" height="100">
+                    </div>
+                    <div class="column">
+                        <img src="images/social media/instagram.png" class="social" alt="social meida logo" width="100" height="100">
+                    </div>
+                    <div class="column">
+                        <img src="images/social media/twitter.png" class="social" alt="social meida logo" width="100" height="100">
+                    </div>
+                    <div class="column">
+                        <img src="images/social media/Youtube.png" class="social" alt="social meida logo" width="100" height="100">
+                    </div>
+            </div>
+    </div>
+                <div id="main-nav" class="bottomnav">
+                    <nav id="main-nav">
+                        <h2 class="hidden">Main Navigation</h2>
+                        <ul>
+                           <li><a class="active" href="index.html">About Us</a></li>
+                            <li><a href="#">Food & Beverages</a></li>
+                            <li><a href="#" href="gallery.html">Gallery</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </nav>
                 </div>
                 <div id="footer-newsletter1" class="box-color">
+                    <p>Newsletter</p>
                 </div>
                 <div id="footer-newsletter2" class="box-color">
+                    <p>Back To Top</p>
                 </div>
-                <div id="footer-social" class="box-color">
+                <div id="footer-social2" class="box-color">
+                    <p>Cookie Settings</p>
                 </div>
             </div>
-        </div>
+    </div>
 
     </div><!--end container-->  
 </body>
