finished desktop html
finished to build desktop html and gallery

--- a/gallery.html
+++ b/gallery.html
@@ -12,14 +12,14 @@
         <div id="header-con">
             <div id="main-header" class="grid-con">
                 <div id="header-box1" class="logo">
-                    <img src="images/logo.png" alt="logo" width="60" height="60">
-                    <p>Korean Restraunt</p>
+                    <img src="images/logo.png" alt="logo" width="70" height="70">
+                    <p class="name">Korean Restraunt</p>
                 </div>
                 <div id="main-nav" class="box-color">
                     <nav id="main-nav">
                         <h2 class="hidden">Main Navigation</h2>
                         <ul>
-                            <li><a class="active" href="index.html">About Us</a></li>
+                            <li><a href="#">About Us</a></li>
                             <li><a href="#">Food & Beverages</a></li>
                             <li><a href="#">Gallery</a></li>
                             <li><a href="#">Contact Us</a></li>
@@ -57,63 +57,93 @@
                 <h2 class="recommendations">Recipe Menus</h2>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/bossam_gallery.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Pork Dish</h4>
                     <P>Bossam</P>
+                    <h4 class="gallery_grade">83% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Bulgogi.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Thin Slices Meat</h4>
                     <p>Bulgogi</p>
+                    <h4 class="gallery_grade">81% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/spicy_chicken_gallery.jpg" alt="image">
-                    <p>Dak-Bokkeum-Tang</p>
+                    <h4 class="gallery_intro">Korean Spicy Chicken</h4>
+                    <p>Dak Dori Tang</p>
+                    <h4 class="gallery_grade">73% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/egg fride.jpg" alt="image">
-                    <p>Egg-Custard</p>
+                    <h4 class="gallery_intro">Korean Egg Custard</h4>
+                    <p>Gyeranjjim</p>
+                    <h4 class="gallery_grade">81% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Galbitang _gallery.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Rib Soup</h4>
                     <p>Galbitang</p>
+                    <h4 class="gallery_grade">88% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/miso soup.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Hot Stew</h4>
                     <p>Imso-Soup</p>
+                    <h4 class="gallery_grade">64% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/pork belly.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Meat Dish</h4>
                     <p>Pork-Belly</p>
+                    <h4 class="gallery_grade">92% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/rice balls.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Onigiri</h4>
                     <p>Rice Balls</p>
+                    <h4 class="gallery_grade">68% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/round polka dot.jpg" alt="image">
-                    <p>Round Polka Dot</p>
+                    <h4 class="gallery_intro">Korean traditional holiday Dish</h4>
+                    <p class="Donggeurang">Donggeurangttaeng</p>
+                    <h4 class="gallery_grade">87% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/stick.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Jeok</h4>
                     <p>Sanjeok</p>
+                    <h4 class="gallery_grade">77% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/cold noodles.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Cold Noodles</h4>
                     <p>Naengmyeon</p>
+                    <h4 class="gallery_grade">75% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Japchae.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Stir-Fried Glass Noodles</h4>
                     <p>Japchae</p>
+                    <h4 class="gallery_grade">76% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Steamed Kodari.jpg" alt="image">
+                    <h4 class="gallery_intro">Savory Braised Dish</h4>
                     <p>Steamed Kodari</p>
+                    <h4 class="gallery_grade">51% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Budae_Jjigae.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Hot Ham Soup</h4>
                     <p>Budae_Jjigae</p>
+                    <h4 class="gallery_grade">68% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/ Gamjatang.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Hot Meat Soup</h4>
                     <p>Gamjatang</p>
+                    <h4 class="gallery_grade">71% People Like This Recipe</h4>
                 </div>
             </div>         
         </main>
@@ -139,9 +169,9 @@
                     <nav id="main-nav">
                         <h2 class="hidden">Main Navigation</h2>
                         <ul>
-                           <li><a class="active" href="index.html">About Us</a></li>
+                           <li><a href="#">About Us</a></li>
                             <li><a href="#">Food & Beverages</a></li>
-                            <li><a href="#" href="gallery.html">Gallery</a></li>
+                            <li><a href="#">Gallery</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </nav>
