--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <nav id="main-nav">
                         <h2 class="hidden">Main Navigation</h2>
                         <ul>
-                            <li><a class="active" href="index.html">About Us</a></li>
+                            <li><a href="#">About Us</a></li>
                             <li><a href="#">Food & Beverages</a></li>
-                            <li><a class="active" href="gallery.html">Gallery</a></li>
+                            <li><a class="#" href="gallery.html">Gallery</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul> 
                     </nav>
