finished mobile index
finished to build gallery html and mobile html

--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,6 @@
         </div> 
 
         <main>
-
             <div id="gallery-hero-con">
                 <img src="images/korean foods.jpg" alt="hero">
                 <div class="grid-con">
@@ -70,7 +69,7 @@
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/spicy_chicken_gallery.jpg" alt="image">
                     <h4 class="gallery_intro">Korean Spicy Chicken</h4>
-                    <p>Dak Dori Tang</p>
+                    <p class="Donggeurang">Dak Dori Tang</p>
                     <h4 class="gallery_grade">73% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
