--- a/gallery_mobile.html
+++ b/gallery_mobile.html
@@ -12,7 +12,7 @@
         <div id="header-con">
             <div id="main-header" class="grid-con">
                 <img src="images/logo.png" alt="image" id="header-logo" width="60" height="60">
-                <h3 class="title">Korean Restraunt</h3>
+                <h3 class="name">Korean Restraunt</h3>
                  <div id="mobile-nav">
                     <span class="burger"></span>
                     <span class="burger"></span>
@@ -23,9 +23,15 @@
 
         <main>
             <div id="hero-gallery-con">
+                <img src="images/korean foods copy.jpg" alt="hero">
                 <div class="grid-con">
-                    <div id="hero-gallery-text">
-                       <img src="images/rectangle pictures/cold noodle.jpg" id="hero-image" class="box-color"> 
+                    <div id="hero-gallery-text" class="box-color">
+                        <h3>Have You Know?</h3>
+                        <p>There are hundreds of different types of kimchi made with different vegetables as the main ingredients.
+                            Traditionally, winter kimchi, called kimjang, was stored in large earthenware fermentation vessels, called onggi, 
+                            in the ground to prevent freezing during the winter months and to keep it cool enough to slow down the fermentation process 
+                            during summer months.
+                        </p>
                     </div>
                     <div id="gallery-controls">
                         <span class="dot"></span>
@@ -36,30 +42,42 @@
             </div>
 
             <div class="grid-con" id="gallery">
-                <h2>Recommendations For Today</h2>
+                <h2>Recipe Menus</h2>
                 <div class="gallery-box">
-                    <img src="images/rectangle pictures/bossam_mobile.jpg" alt="image">
-                    <p> Bossam</p>
+                    <img src="images/rectangle pictures/bossam copy.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Pork Dish</h4>
+                    <P>Bossam</P>
+                    <h4 class="gallery_grade">83% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
-                    <img src="images/rectangle pictures/Bulgogi.jpg" alt="image">
+                    <img src="images/rectangle pictures/Bulgogi copy.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Thin Slices Meat</h4>
                     <p>Bulgogi</p>
+                    <h4 class="gallery_grade">81% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Chicken doritang.jpg" alt="image">
-                    <p>Doritang</p>
+                    <h4 class="gallery_intro">Korean Spicy Chicken</h4>
+                    <p class="Donggeurang">Dak Dori Tang</p>
+                    <h4 class="gallery_grade">73% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
-                    <img src="images/rectangle pictures/egg fride.jpg" alt="image">
-                    <P>Egg Custard</P>
+                    <img src="images/rectangle pictures/egg fride copy.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Egg Custard</h4>
+                    <p>Gyeranjjim</p>
+                    <h4 class="gallery_grade">81% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
                     <img src="images/rectangle pictures/Galbitang.jpg" alt="image">
-                    <P>Galbitang</P>
+                    <h4 class="gallery_intro">Korean Rib Soup</h4>
+                    <p>Galbitang</p>
+                    <h4 class="gallery_grade">88% People Like This Recipe</h4>
                 </div>
                 <div class="gallery-box">
-                    <img src="images/rectangle pictures/miso soup.jpg" alt="image">
-                    <p>Imso_Soup</p>
+                    <img src="images/rectangle pictures/miso soup copy.jpg" alt="image">
+                    <h4 class="gallery_intro">Korean Hot Stew</h4>
+                    <p class="imso">Imso-Soup</p>
+                    <h4 class="gallery_grade">64% People Like This Recipe</h4>
                 </div>
             </div>              
         </main>
