--- a/index_mobile.html
+++ b/index_mobile.html
@@ -24,6 +24,7 @@
             <div id="hero-con">
                 <div class="grid-con">
                     <img src="images/rectangle pictures/cold noodle.jpg" id="hero-image" class="box-color">
+                    <p class="name">Korean Restraunt</p>
                     <div id="hero-text" class="box-color">
                     </div>
                 </div>
@@ -32,9 +33,11 @@
             <div id="image-slider-con">
                 <h2 class="text-color">Recommendations For Today</h2>
                 <img src="images/rectangle pictures/ banquet noodles1.jpg" alt="image">
+                <p class="food">Korean Hot Noodles</p>
+                <p class="products-text">Janchi-guksu</p>
+                <img src="images/stars.png" class="grade" alt="grade">
                 <!-- ascii symbols for <> -->
                 <span id="mobile-slider-left">&#60</span>
-                <h1>Janchi-guksu</h1>
                 <span id="mobile-slider-right">&#62</span>
             </div>
 
@@ -44,7 +47,6 @@
                         <div class="grid-con">
                             <div id="about-us-text" class="box-color">
                                 <h3>Korean food came from very old traditions in Korea. It has developed through many environmental, political, and cultural changes. There are special rules for eating meals in Korea. 
-                                    <br>
                                     <h1 class="hidden">...</h1>
                                     Korean cuisine is largely based on rice, vegetables, seafood and meats. Dairy is largely absent from the traditional Korean diet. Traditional Korean meals are named for the number of side dishes that accompany steam-cooked short-grain rice.</h3>
                             </div>
